# SudokuSolver

./: .gitignore  AppManager.cpp  AppManager.h  CMakeLists.txt  SingleIstance.cpp  SingleIstance.h  StartupDialog.cpp  StartupDialog.h  TODO.txt  main.cpp  mainwindow.cpp  mainwindow.h  resizer.tpp  solverworker.cpp  solverworker.h
.lupdate/: SudokuSolver_lupdate_project.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_SudokuSolver_0f9f32d031.cmake
.qt/rcc/: SudokuSolver_translations.qrc
libs/: CMakeLists.txt  SudokuSolverAlgorithm.cpp  SudokuSolverAlgorithm.h  source.lnk
translations/: SudokuSolver_de_DE.ts  SudokuSolver_en_GB.ts  SudokuSolver_it_IT.ts
